force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/FieloCH__ChallengeMissionMember__c.object-meta.xml
<CustomObject>
    <label>Challenge Mission Member</label>
    <nameField>
        <displayFormat>CHMM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenges Missions Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>