force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__AlternativeKey__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__AlternativeKey__c</fullName>
    <description>Key with ChallengeMission Id and Member Id.</description>
    <label>Alternative Key</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>