force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__ChallengeMember__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ChallengeMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChallengeMember</label>
    <referenceTo>FieloCH__ChallengeMember__c</referenceTo>
    <relationshipLabel>Challenges Missions Members</relationshipLabel>
    <relationshipName>ChallengesMissionsMembers</relationshipName>
    <type>Lookup</type>
</CustomField>