force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__ChallengeMission__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ChallengeMission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge Mission</label>
    <referenceTo>FieloCH__ChallengeMission__c</referenceTo>
    <relationshipLabel>Challenge Missions Members</relationshipLabel>
    <relationshipName>ChallengeMissionsMembers</relationshipName>
    <type>Lookup</type>
</CustomField>