force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__Counter__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Counter__c</fullName>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>