force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__MaxValue__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__MaxValue__c</fullName>
    <label>MaxValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>