force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accomplish</fullName>
            </value>
            <value>
                <fullName>Not Accomplish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>