force-app/main/default/objects/FieloCH__ChallengeMissionMember__c/fields/FieloCH__Summary__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Summary__c</fullName>
    <label>Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>